--- a/demo.css
+++ b/demo.css
@@ -2,6 +2,11 @@ table.dataTable td.MEDIUM {
   background-color:yellow;
 }
 
+table.dataTable td.HIGH {
+  background-color:red;
+}
+
+
 table.dataTable td.NOT {
   background-color:red;
 }
