--- a/demo.css
+++ b/demo.css
@@ -3,7 +3,7 @@ table.dataTable td.MEDIUM {
 }
 
 table.dataTable td.HIGH {
-  background-color:red;
+  background-color:pink;
 }
 
 table.dataTable td.LOW {
