--- a/demo.css
+++ b/demo.css
@@ -41,3 +41,8 @@ table.dataTable td.IN-PROGRESS {
 table.dataTable td.COMPLETED {
   background-color:green;
 }
+
+.buttons {
+  float: right;
+  padding-left: 15px;
+}
