--- a/demo.css
+++ b/demo.css
@@ -1,5 +1,13 @@
 table.dataTable thead{
-  background-color:light grey;
+  background-color: lightgrey;
+}
+
+table.dataTable tbody tr:nth-child(odd) {
+    background-color: #f9f9f9;
+}
+
+table.dataTable tbody tr:nth-child(even) {
+    background-color: #ffffff;
 }
 
 table.dataTable td.MEDIUM {
