--- a/demo.css
+++ b/demo.css
@@ -137,5 +137,11 @@ add these css, you could adjust the width accordingly
     width: 10%;
 }
 
+#googleSheetsDataTable td:nth-child(5),
+#googleSheetsDataTable th:nth-child(5) {
+  word-break: break-word;
+  overflow-wrap: anywhere;
+}
+
 .badge {white-space: wrap;}    
 </style> 
