--- a/demo.css
+++ b/demo.css
@@ -92,56 +92,16 @@ table.dataTable th.toolDescription {
 }*/
 
 /* Small screens: reduce width so layout remains responsive */
-@media (max-width: 768px) {
+/*@media (max-width: 768px) {
   table.dataTable td.toolDescription,
   table.dataTable th.toolDescription {
     /* allow the column to shrink on small screens */
     width: auto;
     min-width: 0;
   }
-} 
-
-$(document).ready(function () {
-  new DataTable('#googleSheetsDataTable', {
-    responsive: true
-  });
-add these css, you could adjust the width accordingly
-<style>
-#googleSheetsDataTable th:nth-child(1),
-#googleSheetsDataTable td:nth-child(1) {
-    width: 10%;   
-}
-#googleSheetsDataTable th:nth-child(2),
-#googleSheetsDataTable td:nth-child(2) {
-    width: 10%;
-}
-#googleSheetsDataTable th:nth-child(3),
-#googleSheetsDataTable td:nth-child(3) {
-    width: 30%;
-
-}
-#googleSheetsDataTable th:nth-child(4),
-#googleSheetsDataTable td:nth-child(4) {
-    width: 10%;
-}
-#googleSheetsDataTable th:nth-child(5),
-#googleSheetsDataTable td:nth-child(5) {
-    width: 5%;
-}
-#googleSheetsDataTable th:nth-child(6),
-#googleSheetsDataTable td:nth-child(6) {
-    width: 10%;
-}
-#googleSheetsDataTable th:nth-child(7),
-#googleSheetsDataTable td:nth-child(7) {
-    width: 10%;
-}
-
-#googleSheetsDataTable td:nth-child(5),
-#googleSheetsDataTable th:nth-child(5) {
+}*/
+#data-table-container td:nth-child(5),
+#data-table-container th:nth-child(5) {
   word-break: break-word;
   overflow-wrap: anywhere;
 }
-
-.badge {white-space: wrap;}    
-</style> 
